Remove emojis from output messages in notebook

--- a/notebooks/ModelosML.ipynb
+++ b/notebooks/ModelosML.ipynb
@@ -42,8 +42,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📂 Cargando datos desde: C:\\Users\\eveca\\OneDrive\\Escritorio\\Proyecto_Desercion_Estudiantil\\data/processed/conare_modelo.csv\n",
-      "✔ Datos cargados correctamente.\n"
+      "Cargando datos desde: C:\\Users\\eveca\\OneDrive\\Escritorio\\Proyecto_Desercion_Estudiantil\\data/processed/conare_modelo.csv\n",
+      "Datos cargados correctamente.\n"
      ]
     },
     {
@@ -254,11 +254,11 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "📌 Preparando datos para CLASIFICACIÓN...\n",
-      "⚠️ Eliminando columna enorme: CARRERA (703 categorías)\n",
-      "⚠️ Eliminando columna enorme: EDAD (136 categorías)\n",
-      "⚠️ Eliminando columna enorme: CANTON_ESTUDIANTE (86 categorías)\n",
-      "✔ Clasificación lista. Shape final: (488112, 35)\n"
+      "Preparando datos para CLASIFICACIÓN...\n",
+      "Eliminando columna enorme: CARRERA (703 categorías)\n",
+      " Eliminando columna enorme: EDAD (136 categorías)\n",
+      "Eliminando columna enorme: CANTON_ESTUDIANTE (86 categorías)\n",
+      "Clasificación lista. Shape final: (488112, 35)\n"
      ]
     },
     {
@@ -627,8 +627,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🌲 Entrenando modelo de CLASIFICACIÓN (Random Forest)...\n",
-      "✔ Modelo entrenado.\n"
+      " Entrenando modelo de CLASIFICACIÓN (Random Forest)...\n",
+      " Modelo entrenado.\n"
      ]
     },
     {
